# asof-join

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  enable_perf_counters.sh  shell.nix
benchmark/: plot_benchmarks.py  plot_diff_percentile_left_vs_filter.py  plot_diff_search_algorithms.py  plot_diff_zipf_skews_phases_breakup.py  plot_increasing_partitions.py  plot_locking_vs_copying.py  plot_lpj_vs_rpj_vs_smj.py  plot_spin_lock_contention_experiment.py  plot_thread_scalability.py  plot_thread_scalability_phases_breakup.py  run_benchmarks.py  shell.nix  visualize_runtimes.py
benchmark/benchmark_plotter/: README.md  texify.py
benchmark/results/: new_res.txt  zipf_large_benchmark.txt  zipf_uniform_benchmark.txt
benchmark/results/large_zipf_results/: benchmark_uniform.txt  benchmark_zipf_1_1.txt  benchmark_zipf_1_3.txt  benchmark_zipf_1_5.txt  benchmark_zipf_2.txt
data/: transform_btc_data.py
data-generator/: generate_data.py  generate_order_book.py  generate_price_list.py  generate_zipf_order_books.py  shell.nix
include/: Relation.h  asof_join.h  asof_join.hpp  benchmark.hpp  btree.hpp  hash_table.hpp  log.hpp  mmap_file.h  mmap_file.hpp  parallel_multi_map.hpp  perfevent.hpp  relation.h  relation.hpp  searches.hpp  spin_lock.hpp  timer.h  timer.hpp  tuple_buffer.hpp  uniform_gen.hpp  util.hpp  zipf_gen.hpp
include/benchmark/: benchmark.hpp
lib/: fmt.cmake  gtest.cmake
scripts/: generate_random_order_book.py  install_tbb.sh  interpolate_btc_data.py  shell.nix  transform_btc_data.py
src/: AsofOp.cc  asof_benchmark.cc  asof_benchmark.cpp  asof_join.cpp  asof_op.cc  relation.cc
src/algorithms/: copy_left_partitioning_join.cc  left_partitioning_btree.cc  left_partitioning_filter_min.cc  left_partitioning_join.cc  left_partitioning_split_binary_search.cc  nested_loop_join.cc  partition_sorted_merge_join.cc  partitioning_both_sort_left.cc  partitioning_both_sort_right.cc  right_partitioning_btree.cc  right_partitioning_filter_min.cc  right_partitioning_join.cc  right_partitioning_split_binary_search.cc  sorted_merge_join.cc
src/benchmark/: benchmark.cc  benchmark_increasing_partitions.cc  benchmark_runtime_l_vs_r.cc  benchmark_runtime_l_vs_r.cpp  benchmark_search_algorithms.cc  benchmark_threads_scalability.cc  benchmark_uniform_both_sides.cc  copying_vs_locking.cc  diff_zipf_skews.cc  left_partitioning_vs_filter_diff_percentile.cc  small_order_book_contention.cc
test/: asof_join.cc  asof_join.cpp  asof_join_test.cc  btree_test.cc  parallel_multi_map_test.cc  searches_test.cc  tuple_buffer_test.cc
test/data/: btc_orderbook_medium.csv  btc_orderbook_small.csv  decompress_btc_data.sh  orderbook_small.csv  prices_small.csv  small_filter_min_positions.csv  small_filter_min_positions_right.csv  small_filter_min_prices.csv  small_filter_min_prices_right.csv  uniform_small_positions.csv  uniform_small_prices.csv  zipf_small_positions.csv  zipf_small_prices.csv
